Closed
Bug 299807
Opened 21 years ago
Closed 20 years ago
little yellow triangle for Error Page favicon no longer shown
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.0
People
(Reporter: alqahira, Assigned: sfraser_bugs)
References
()
Details
(Keywords: fixed1.8, regression)
Attachments
(1 file)
|
2.16 KB,
patch
|
Details | Diff | Splinter Review |
Some time ago Simon fixed things so that when a site failed to load/error page
was displayed, we got a little yellow /!\ triangle as the favicon.
This no longer works; I'm not sure when it regressed :-(
| Reporter | ||
Comment 1•21 years ago
|
||
OK, this regressed between June 27 (works) and June 28 (broken) nightlies for
windows/tabs that do not load your homepage when opening a new one of them.
*However*, you will *never* get the icon in any window/first tab if your
homepage is displayed when you load new tabs/windows--*unless* the page that is
set as your homepage is not found on startup. As far as I can tell, this
*never* worked and you'll always see the globe (unless the favicon of the page
is cached; then you'll see it, which is even worse than seeing the globe rather
than the /!\)
If your homepage is displayed successfully on startup/creation of new
window/creation of new tab, any subsequent errors in [whatever container type
displays homepage] will always display the globe, even in the June 27 and prior
builds. (If your homepage is an invalid/unreachable page, then you will see the
icon, but that won't be the case for most people.)
(Is the last pgh clear? It's easy to demo but hard to explain.)
Can this be fixed (again) for 0.9? I think it's an important piece of UI for
the successful adoption of error pages.
Flags: camino0.9?
| Reporter | ||
Comment 2•21 years ago
|
||
I think the regression part of this bug could have been Simon's fix for the
regression in bug 298291; cf. the original bug where the /!\ went in (I finally
found it), bug 295429.
An endless cycle of regressions? :-(
Comment 3•21 years ago
|
||
any clues as to what broke this? packaging change in chrome?
Flags: camino0.9? → camino0.9+
Target Milestone: --- → Camino0.9
| Assignee | ||
Comment 4•21 years ago
|
||
I'll take a look.l Maybe we don't get an error status on the nsIRequest any more.
Assignee: pinkerton → sfraser_bugs
| Assignee | ||
Comment 5•21 years ago
|
||
This broke because we're getting an onLocationChange for the error sheet, which
a good status.
Status: NEW → ASSIGNED
| Assignee | ||
Comment 6•21 years ago
|
||
Fixed by not changing the favicon for onLocationChange requests that don't have
an nsIRequest (like the error page load).
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 7•21 years ago
|
||
When the current page is a local page (local homepage or simply some random
file) and the next page fails to load, you don't get the little yellow triangle.
Not sure if this is worth reopening the bug for or not; I may be the only person
left in the world who uses a local homepage....
Comment 8•21 years ago
|
||
That should still be fixed, at any rate.
| Reporter | ||
Comment 9•21 years ago
|
||
Reopening (again). This regressed again in the August 1 build. Could bug
302962 have regressed this (perhaps by way of bug 301666)?
P.S. Your favicon looked much nicer than the one we got from the core bug :-(
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 10•21 years ago
|
||
(In reply to comment #9)
> P.S. Your favicon looked much nicer than the one we got from the core bug :-(
Totally. The core one is ugly.
| Reporter | ||
Comment 11•20 years ago
|
||
Is this still broken again because bug 301119 hasn't been fixed to address
changes caused by "prettifying" (uglifying) error pages in bug 280190?
(Bug 301666 was filed to address comment 7, not the August breakage, in case
comment 9 is confusing...it confused me for a moment....)
| Assignee | ||
Updated•20 years ago
|
Target Milestone: Camino0.9 → Camino1.0
| Assignee | ||
Comment 12•20 years ago
|
||
| Assignee | ||
Comment 13•20 years ago
|
||
Fixed on trunk and branch.
Status: REOPENED → RESOLVED
Closed: 21 years ago → 20 years ago
Keywords: fixed1.8
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•