Fix bug 299807: only change the favicon if the location change has an associated nsIRequest, indicating that it's a new page. This allows the yellow error icon to persist even when we load the error document.